--- a/index.html
+++ b/index.html
@@ -477,9 +477,9 @@ footer{
     </div>
     <div style="text-align: left; margin-top: 10px;">
         <span style="font-size: 12px; color: #666;">a.n ARIEF RAHMAN HAKIM</span>
-        <div style="font-family: monospace; font-size: 18px; font-weight:bold; letter-spacing: 1px; color:#333;">6370360632</div>
+        <div style="font-family: monospace; font-size: 18px; font-weight:bold; letter-spacing: 1px; color:#333;">1233567</div>
     </div>
-    <button onclick="copyText('6370360632')" style="font-size: 12px; padding: 6px 14px; margin-top: 10px; width: 100%;">Salin No. Rek</button>
+    <button onclick="copyText('1234567')" style="font-size: 12px; padding: 6px 14px; margin-top: 10px; width: 100%;">Salin No. Rek</button>
   </div>
 
   <div class="amplop">
@@ -489,9 +489,9 @@ footer{
     </div>
     <div style="text-align: left; margin-top: 10px;">
         <span style="font-size: 12px; color: #666;">a.n PARIKESIT</span>
-        <div style="font-family: monospace; font-size: 18px; font-weight:bold; letter-spacing: 1px; color:#333;">4120387176</div>
+        <div style="font-family: monospace; font-size: 18px; font-weight:bold; letter-spacing: 1px; color:#333;">12345678</div>
     </div>
-    <button onclick="copyText('4120387176')" style="font-size: 12px; padding: 6px 14px; margin-top: 10px; width: 100%;">Salin No. Rek</button>
+    <button onclick="copyText('12345678')" style="font-size: 12px; padding: 6px 14px; margin-top: 10px; width: 100%;">Salin No. Rek</button>
   </div>
 </section>
 
@@ -528,10 +528,10 @@ footer{
   <h2>Konfirmasi Kehadiran</h2>
   <p style="font-size: 14px; margin-bottom: 20px;">Mohon konfirmasi kehadiran Anda melalui WhatsApp:</p>
   
-  <a href="https://wa.me/6288289978035?text=Halo%20Arif%20%26%20Pari,%20saya%20hadir." target="_blank" style="text-decoration: none;">
+  <a href="https://wa.me/xxxxxx?text=Halo%20Arif%20%26%20Pari,%20saya%20hadir." target="_blank" style="text-decoration: none;">
       <button style="background: #25D366; width: 100%; margin-bottom: 10px; border-radius: 8px;">Chat WA Mempelai 1</button>
   </a>
-  <a href="https://wa.me/6289668989958?text=Halo%20Arif%20%26%20Pari,%20saya%20hadir." target="_blank" style="text-decoration: none;">
+  <a href="https://wa.me/xxxxxxxx?text=Halo%20Arif%20%26%20Pari,%20saya%20hadir." target="_blank" style="text-decoration: none;">
       <button style="background: #128C7E; width: 100%; border-radius: 8px;">Chat WA Mempelai 2</button>
   </a>
 </section>
